--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,35 +2,24 @@ galaxy_info:
   role_name: kind
   author: avnes
   description: Will install kind
-  company:
-
   license: license (MIT)
-
-  min_ansible_version: 2.11
+  min_ansible_version: "2.11"
 
   platforms:
-  - name: Fedora
-    versions:
-    - 34
-    - 35
-  - name: Ubuntu
-    versions:
-    - bionic
-    - cosmic
-    - disco
-    - eoan
-    - focal
-    - groovy
-    - hirsute
-    - impish
-  - name: EL
-    versions:
-    - 8
+    - name: Fedora
+      versions:
+        - all
+    - name: Ubuntu
+      versions:
+        - all
+    - name: EL
+      versions:
+        - all
 
   galaxy_tags:
-  - kubernetes
-  - k8s
-  - cli
-  - kind
+    - kubernetes
+    - k8s
+    - cli
+    - kind
 
 dependencies: []
